--- a/spec/fixtures/ticket.yml
+++ b/spec/fixtures/ticket.yml
@@ -124,4 +124,88 @@ http_interactions:
         - Download,4.95,,2013-12-05T00:30:00Z"]}]}}'
     http_version: 
   recorded_at: Mon, 01 Apr 2013 23:34:37 GMT
+- request:
+    method: get
+    uri: http://partner-feed.stubhub.com/listingCatalog/select/?q=%2Bid:488218079%20AND%20%2BstubhubDocumentType:ticket&rows=10&start=0&wt=json
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers: {}
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Server:
+      - Apache
+      Content-Length:
+      - '1243'
+      Content-Type:
+      - application/json;charset=UTF-8
+      Expires:
+      - Sat, 27 Apr 2013 08:52:37 GMT
+      Cache-Control:
+      - max-age=0, no-cache, no-store
+      Pragma:
+      - no-cache
+      Date:
+      - Sat, 27 Apr 2013 08:52:37 GMT
+      Connection:
+      - keep-alive
+      Set-Cookie:
+      - TLTHID=CF828B22AF1710AFEAF0C5C52634E154; Path=/; Domain=.stubhub.com
+      - TLTSID=CF828B22AF1710AFEAF0C5C52634E154; Path=/; Domain=.stubhub.com
+      - dc=origin1;expires=Sat, 27-Apr-2013 09:22:37 GMT;path=/;domain=partner-feed.stubhub.com;
+    body:
+      encoding: US-ASCII
+      string: ! '{"responseHeader":{"status":0,"QTime":0,"params":{"wt":"json","rows":"10","start":"0","q":"+id:488218079
+        AND +stubhubDocumentType:ticket"}},"response":{"numFound":1,"start":0,"docs":[{"stubhubDocumentId":"ticket-488218079","stubhubDocumentType":"ticket","courier":"0","curr_price":78.0,"curPr":78.0,"date_added":"2013-02-25T07:21:23Z","date_last_modified":"2013-02-25T07:22:34Z","delivery_icon":"fedex","end_date":"2013-12-05T00:30:00Z","event_id":"4187540","id":"488218079","priceGroups":"1","quantity":6,"quantity_facet_str":"6
+        tickets|6","quantity_remain":6,"row_desc":"V","sale_method":"1","seats":"General
+        Admission","section":"Mezzanine Level","seller_cobrand":"www","seller_id":"6802387","showTicketKeyStr":"ticketACTIVE4187540","split_option":"1","status":"0","system_status":"ACTIVE","ticket_list_type_desc":"Ticket","ticket_list_type_id":"1","ticket_medium_id":"2","ticket_split":1,"time_left":"221d
+        15h 43m","listing_source_id":"7","listing_source_name":"IndyGen3","updateInitiatedTimestamp":"2013-04-27T08:46:59.220Z","currency_code":"USD","list_price":78.0,"dateLastIndexed":"2013-04-27T08:47:06.372Z","fm_dm_rules":["5,1,4.95,,2013-12-05T00:30:00Z"],"fm_dm_rules_desc":["PDF,Electronic
+        - Download,4.95,,2013-12-05T00:30:00Z"]}]}}'
+    http_version: 
+  recorded_at: Sat, 27 Apr 2013 08:52:37 GMT
+- request:
+    method: get
+    uri: http://partner-feed.stubhub.com/listingCatalog/select/?q=%2Bid:488218079%20AND%20%2BstubhubDocumentType:ticket&wt=json
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers: {}
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Server:
+      - Apache
+      Content-Length:
+      - '1232'
+      Content-Type:
+      - application/json;charset=UTF-8
+      Expires:
+      - Sat, 27 Apr 2013 08:53:54 GMT
+      Cache-Control:
+      - max-age=0, no-cache, no-store
+      Pragma:
+      - no-cache
+      Date:
+      - Sat, 27 Apr 2013 08:53:54 GMT
+      Connection:
+      - keep-alive
+      Set-Cookie:
+      - TLTHID=FD65AAE2AF1710AFE38B92378000F375; Path=/; Domain=.stubhub.com
+      - TLTSID=FD65AAE2AF1710AFE38B92378000F375; Path=/; Domain=.stubhub.com
+      - dc=origin1;expires=Sat, 27-Apr-2013 09:23:54 GMT;path=/;domain=partner-feed.stubhub.com;
+    body:
+      encoding: US-ASCII
+      string: ! '{"responseHeader":{"status":0,"QTime":1,"params":{"wt":"json","rows":"5500","q":"+id:488218079
+        AND +stubhubDocumentType:ticket"}},"response":{"numFound":1,"start":0,"docs":[{"stubhubDocumentId":"ticket-488218079","stubhubDocumentType":"ticket","courier":"0","curr_price":78.0,"curPr":78.0,"date_added":"2013-02-25T07:21:23Z","date_last_modified":"2013-02-25T07:22:34Z","delivery_icon":"fedex","end_date":"2013-12-05T00:30:00Z","event_id":"4187540","id":"488218079","priceGroups":"1","quantity":6,"quantity_facet_str":"6
+        tickets|6","quantity_remain":6,"row_desc":"V","sale_method":"1","seats":"General
+        Admission","section":"Mezzanine Level","seller_cobrand":"www","seller_id":"6802387","showTicketKeyStr":"ticketACTIVE4187540","split_option":"1","status":"0","system_status":"ACTIVE","ticket_list_type_desc":"Ticket","ticket_list_type_id":"1","ticket_medium_id":"2","ticket_split":1,"time_left":"221d
+        15h 43m","listing_source_id":"7","listing_source_name":"IndyGen3","updateInitiatedTimestamp":"2013-04-27T08:46:59.220Z","currency_code":"USD","list_price":78.0,"dateLastIndexed":"2013-04-27T08:47:06.95Z","fm_dm_rules":["5,1,4.95,,2013-12-05T00:30:00Z"],"fm_dm_rules_desc":["PDF,Electronic
+        - Download,4.95,,2013-12-05T00:30:00Z"]}]}}'
+    http_version: 
+  recorded_at: Sat, 27 Apr 2013 08:53:54 GMT
 recorded_with: VCR 2.4.0
